# DBF-Comparator-Pro-web-

./: .env.production.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  macos-desktop.yml  windows-desktop.yml
backend/: .env.desktop.example  .env.example  Dockerfile  alembic.ini  pyproject.toml  run_desktop.py
backend/alembic/: env.py
backend/alembic/versions/: 20260420_000001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: comparisons.py  health.py  router.py
backend/app/core/: config.py  logging.py
backend/app/db/: base.py  session.py
backend/app/models/: artifact.py  event.py  job.py  summary.py
backend/app/repositories/: comparison_jobs.py
backend/app/schemas/: comparison.py
backend/app/services/: comparison_engine.py  comparison_jobs.py  dbf_preview.py  reporting.py  runtime_checks.py  strict_dbf_reader.py  temp_storage.py  uploads.py
backend/app/workers/: __init__.py  celery_app.py  process.py  runner.py  tasks.py
backend/tests/: test_celery_tasks.py  test_comparison_engine.py  test_desktop_runtime.py  test_health_api.py  test_manual_regression_cases.py  test_strict_dbf_reader.py  test_temp_storage.py
desktop/: README.md  main.cjs  package-lock.json  package.json  preload.cjs
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
infra/nginx/: Dockerfile  default.conf  default.prod.conf.template
project/: architecture.md  beget-deploy.md  design.md  prd.md  runbook.md  tasks.md
(+45 files in other folders)
